Remove use of jsf15 API. MYFACES-1876